Issue #18829: csv.Dialect() now checks type for delimiter, escapechar and quotechar fields.  Original patch by Vajrasky Kok.